lighttpd/lighttpd-1.4.68/futag-fuzz-drivers/failed/http_auth_backend_get/http_auth_backend_get2/http_auth_backend_get2.err
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/http_auth_backend_get/http_auth_backend_get2/http_auth_backend_get2.c:18:5: error: use of undeclared identifier 'http_method_t'
    http_method_t e_1_i = e_1_i_enum_index % 41;
    ^
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/http_auth_backend_get/http_auth_backend_get2/http_auth_backend_get2.c:20:30: warning: implicit declaration of function 'http_method_buf' is invalid in C99 [-Wimplicit-function-declaration]
    const buffer * s__name = http_method_buf(e_1_i);
                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
1 warning and 2 errors generated.
